--- a/app/styles/base/classes.scss
+++ b/app/styles/base/classes.scss
@@ -140,3 +140,8 @@
 .text-col-black, .text-col-black:focus, .text-col-black:hover {
     color: black;
 }
+
+/* Typography */
+.font-size-sm {
+    font-size: 11px;
+}
